--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
+    "string-comparison": "^1.0.9",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
